--- a/public/translations/en/projects/sage.json
+++ b/public/translations/en/projects/sage.json
@@ -6,6 +6,7 @@
         "height": 649,
         "label": "Sageweb:shortcuts screenshoot"
     },
+    "folder": "genesysinf/",
     "sections": [
         [
             [
