--- a/public/translations/en/projects/_template.json
+++ b/public/translations/en/projects/_template.json
@@ -2,11 +2,11 @@
     "title": "Lorem Ipsum - required",
     "cover": {
         "src": "/path-to-src - required, width and height are required",
-        "width": 3840,
-        "height": 2160,
+        "size": [3840, 2160],
         "isVideo": true,
         "label": "Alt Text: Lorem Ipsum - required"
     },
+    "folder": "mainpath/",
     "sections": [
         [
             [
@@ -41,16 +41,14 @@
                 {
                     "class": "landscape",
                     "src": "/path - required / width and height are required",
-                    "width": 3840,
-                    "height": 2160,
+                    "size": [3840, 2160],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Alt"
                 },
                 {
                     "src": "/path",
-                    "width": 3840,
-                    "height": 2160,
+                    "size": [3840, 2160],
                     "label": "Alt"
                 }
             ]
