--- a/public/translations/en/projects/cecerele.json
+++ b/public/translations/en/projects/cecerele.json
@@ -1,12 +1,12 @@
 {
     "title": "Cecerelê",
     "cover": {
-        "src": "cecerele/cecerele-tour",
-        "width": 3836,
-        "height": 2056,
+        "src": "cecerele-tour",
+        "size": [3836, 2056],
         "isVideo": true,
-        "label": "Cecerelê:criada em 2019 pela historiadora Joana Schossler para produzir jogos, contamos com a colaboração de artistas, designers e pesquisadores muito talentosos. Com o propósito de oferecer para a sociedade brinquedos bonitos, educativos e de qualidade - website tour"
+        "label": "Cecerelê: criada em 2019 pela historiadora Joana Schossler para produzir jogos, contamos com a colaboração de artistas, designers e pesquisadores muito talentosos. Com o propósito de oferecer para a sociedade brinquedos bonitos, educativos e de qualidade - website tour"
     },
+    "folder": "cecerele/",
     "sections": [
         [
             [
@@ -15,19 +15,17 @@
             [
                 {
                     "class": "landscape",
-                    "src": "cecerele/cecerele-br-home-update",
-                    "width": 3840,
-                    "height": 2368,
+                    "src": "cecerele-br-home-update",
+                    "size": [3840, 2368],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:homepage with products updated on dec. 2021"
+                    "label": "Cecerelê: homepage with products updated on dec. 2021"
                 }, {
-                    "src": "cecerele/cecerele-br-sobre-nos",
-                    "width": 1920,
-                    "height": 5654,
+                    "src": "cecerele-br-sobre-nos",
+                    "size": [1920, 5654],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:about us page"
+                    "label": "Cecerelê: about us page"
                 }
             ]
         ],
@@ -37,43 +35,38 @@
             ],
             [
                 {
-                    "src": "cecerele/cecerele-br-pd-8e2da8-kit-para-colorir-adulto-edicao-limitada",
-                    "width": 1170,
-                    "height": 1863,
+                    "src": "cecerele-br-pd-8e2da8-kit-para-colorir-adulto-edicao-limitada",
+                    "size": [1170, 1863],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:-product page"
+                    "label": "Cecerelê: -product page"
                 },
                 {
-                    "src": "cecerele/cecerele-br-pd-8e3765-kit-para-colorir-infantil-edicao-limitada",
-                    "width": 1280,
-                    "height": 1815,
+                    "src": "cecerele-br-pd-8e3765-kit-para-colorir-infantil-edicao-limitada",
+                    "size": [1280, 1815],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:kit para colorir adulto edição limitada - product page"
+                    "label": "Cecerelê: kit para colorir adulto edição limitada - product page"
                 },
                 {
-                    "src": "cecerele/cecerele-br-memorelas-jogo-de-memoria-das-mulheres-brasileiras",
-                    "width": 1920,
-                    "height": 2002,
+                    "src": "cecerele-br-memorelas-jogo-de-memoria-das-mulheres-brasileiras",
+                    "size": [1920, 2002],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Memorêlas jogo de memória das mulheres brasileiras - product page"
+                    "label": "Cecerelê: Memorêlas jogo de memória das mulheres brasileiras - product page"
                 },
                 {
-                    "src": "cecerele/cecerele-br-minha-praia-livro-de-colorir",
-                    "width": 1920,
-                    "height": 1927,
+                    "src": "cecerele-br-minha-praia-livro-de-colorir",
+                    "size": [1920, 1927],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Minha praia, livro de colorir - product page"
+                    "label": "Cecerelê: Minha praia, livro de colorir - product page"
                 }, {
-                    "src": "cecerele/cecerele-br-quebra-cabeca-revolucionarias",
-                    "width": 1920,
-                    "height": 2027,
+                    "src": "cecerele-br-quebra-cabeca-revolucionarias",
+                    "size": [1920, 2027],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Quebra cabeça Revolucionárias -product page"
+                    "label": "Cecerelê: Quebra cabeça Revolucionárias -product page"
                 }
             ]
         ],
@@ -84,27 +77,24 @@
             [
                 {
                     "class": "landscape",
-                    "src": "cecerele/cecerele-br-cart-content",
-                    "width": 1920,
-                    "height": 1476,
+                    "src": "cecerele-br-cart-content",
+                    "size": [1920, 1476],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Cart Content"
+                    "label": "Cecerelê:  Cart Content"
                 }, {
                     "class": "landscape",
-                    "src": "cecerele/cecerele-br-login",
-                    "width": 1920,
-                    "height": 1295,
+                    "src": "cecerele-br-login",
+                    "size": [1920, 1295],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Login"
+                    "label": "Cecerelê: Login"
                 }, {
-                    "src": "cecerele/cecerele-br-cart-client-address",
-                    "width": 1920,
-                    "height": 1476,
+                    "src": "cecerele-br-cart-client-address",
+                    "size": [1920, 1476],
                     "canExpand": true,
                     "isVideo": false,
-                    "label": "Cecerelê:Client Address"
+                    "label": "Cecerelê: Client Address"
                 }
             ]
         ]
