--- a/public/translations/en/projects/cicb.json
+++ b/public/translations/en/projects/cicb.json
@@ -1,12 +1,12 @@
 {
     "title": "Brazilian Leather",
     "cover": {
-        "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-full-tour",
-        "width": 1462,
-        "height": 784,
+        "src": "portal/brazilian-leather-cicb-cscb-leather-law-portal-full-tour",
+        "size": [1462, 784],
         "isVideo": true,
         "label": "Brazilian Leather - homepage full tour"
     },
+    "folder": "brazilian leather/",
     "sections": [
         [
             [
@@ -18,37 +18,32 @@
             ],
             [
                 {
-                    "src": "brazilian leather/portal/cicb.org.br-31-03-19-1-mobile",
-                    "width": 833,
-                    "height": 1728,
+                    "src": "portal/cicb.org.br-31-03-19-1-mobile",
+                    "size": [833, 1728],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Brazilian Leather - mobile tour"
                 },
                 {
-                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page-en-2020-12-15-23_21_33",
-                    "width": 1920,
-                    "height": 12721,
+                    "src": "portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page-en-2020-12-15-23_21_33",
+                    "size": [1920, 12721],
                     "canExpand": true,
                     "label": "Brazilian Leather - home"
                 },
                 {
-                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page",
-                    "width": 1920,
-                    "height": 10257,
+                    "src": "portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page",
+                    "size": [1920, 10257],
                     "canExpand": true,
                     "label": "Brazilian Leather - about"
                 },
                 {
-                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-brazilian-leather-mandarin-chinese-full-page",
-                    "width": 1920,
-                    "height": 7451,
+                    "src": "portal/brazilian-leather-cicb-cscb-leather-law-portal-brazilian-leather-mandarin-chinese-full-page",
+                    "size": [1920, 7451],
                     "canExpand": true,
                     "label": "Brazilian Leather - in Mandarin Chinese"
                 }, {
-                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-cicb-website-full-page",
-                    "width": 1920,
-                    "height": 11726,
+                    "src": "portal/brazilian-leather-cicb-cscb-leather-law-portal-cicb-website-full-page",
+                    "size": [1920, 11726],
                     "canExpand": true,
                     "label": "CSCB - Home page"
                 }
@@ -65,22 +60,19 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-tour",
-                    "width": 1455,
-                    "height": 768,
+                    "src": "forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-tour",
+                    "size": [1455, 768],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2016 - Full tour"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-full-page",
-                    "width": 1920,
-                    "height": 6219,
+                    "src": "forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-full-page",
+                    "size": [1920, 6219],
                     "canExpand": true,
                     "label": "Fórum 2016 - Full page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2016/forum-2016-1-mobile",
-                    "width": 831,
-                    "height": 1712,
+                    "src": "forum-cicb/2016/forum-2016-1-mobile",
+                    "size": [831, 1712],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2016 - Mobile tour"
@@ -94,22 +86,19 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-tour",
-                    "width": 1458,
-                    "height": 768,
+                    "src": "forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-tour",
+                    "size": [1458, 768],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2017 - Full tour"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-full-page",
-                    "width": 1920,
-                    "height": 9774,
+                    "src": "forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-full-page",
+                    "size": [1920, 9774],
                     "canExpand": true,
                     "label": "Fórum 2017 - Full page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2017/forum-2017-1-mobile",
-                    "width": 834,
-                    "height": 1728,
+                    "src": "forum-cicb/2017/forum-2017-1-mobile",
+                    "size": [834, 1728],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2017 - Mobile tour"
@@ -123,22 +112,19 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-tour",
-                    "width": 1458,
-                    "height": 768,
+                    "src": "forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-tour",
+                    "size": [1458, 768],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2018 - Full tour"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-full-page",
-                    "width": 1920,
-                    "height": 5600,
+                    "src": "forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-full-page",
+                    "size": [1920, 5600],
                     "canExpand": true,
                     "label": "Fórum 2018 - Full page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2018/forum-2018-1-mobile",
-                    "width": 828,
-                    "height": 1712,
+                    "src": "forum-cicb/2018/forum-2018-1-mobile",
+                    "size": [828, 1712],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2018 - Mobile tour"
@@ -152,22 +138,19 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-tour",
-                    "width": 1441,
-                    "height": 784,
+                    "src": "forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-tour",
+                    "size": [1441, 784],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2019 - Full tour"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-full-page",
-                    "width": 1920,
-                    "height": 5063,
+                    "src": "forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-full-page",
+                    "size": [1920, 5063],
                     "canExpand": true,
                     "label": "Fórum 2019 - Full page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2019/forumcicb2019-mobile",
-                    "width": 834,
-                    "height": 1728,
+                    "src": "forum-cicb/2019/forumcicb2019-mobile",
+                    "size": [834, 1728],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2019 - Mobile tour"
@@ -181,46 +164,40 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2020/cicb.org.br-forum2020",
-                    "width": 1464,
-                    "height": 784,
+                    "src": "forum-cicb/2020/cicb.org.br-forum2020",
+                    "size": [1464, 784],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2020 - Full tour"
                 },
                 {
-                    "src": "brazilian leather/forum-cicb/2020/fórum-cscb-fórum-2020-a-sociedade-somos-todos-nós-full-page",
-                    "width": 1920,
-                    "height": 6309,
+                    "src": "forum-cicb/2020/fórum-cscb-fórum-2020-a-sociedade-somos-todos-nós-full-page",
+                    "size": [1920, 6309],
                     "canExpand": true,
                     "label": "Fórum 2020 - Full page"
                 },
                 {
-                    "src": "brazilian leather/forum-cicb/2020/forum-cscb-2020-mobile-mobile",
-                    "width": 831,
-                    "height": 1712,
+                    "src": "forum-cicb/2020/forum-cscb-2020-mobile-mobile",
+                    "size": [831, 1712],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2020 - Mobile tour"
                 },
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-tour",
-                    "width": 1920,
-                    "height": 928,
+                    "src": "webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-tour",
+                    "size": [1920, 928],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Webinar 2020 - Full tour"
                 }, {
-                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-full-page",
-                    "width": 1920,
-                    "height": 19246,
+                    "src": "webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-full-page",
+                    "size": [1920, 19246],
                     "canExpand": true,
                     "label": "Fórum 2020 - Full page"
                 }, {
-                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-mobile-mobile",
-                    "width": 828,
-                    "height": 1712,
+                    "src": "webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-mobile-mobile",
+                    "size": [828, 1712],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2020 - Mobile tour"
@@ -234,28 +211,24 @@
             [
                 {
                     "class": "landscape",
-                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tour",
-                    "width": 1464,
-                    "height": 784,
+                    "src": "forum-cicb/2021/forum-cicb-2021-tour",
+                    "size": [1464, 784],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2021 - Full tour"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-desk",
-                    "width": 1920,
-                    "height": 5020,
+                    "src": "forum-cicb/2021/forum-cicb-2021-desk",
+                    "size": [1920, 5020],
                     "canExpand": true,
                     "label": "Fórum 2020 - Desktop page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tablet",
-                    "width": 768,
-                    "height": 4563,
+                    "src": "forum-cicb/2021/forum-cicb-2021-tablet",
+                    "size": [768, 4563],
                     "canExpand": true,
                     "label": "Fórum 2020 - Tablet page"
                 }, {
-                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-mobile",
-                    "width": 320,
-                    "height": 4563,
+                    "src": "forum-cicb/2021/forum-cicb-2021-mobile",
+                    "size": [320, 4563],
                     "canExpand": true,
                     "label": "Fórum 2021 - Mobile page"
                 }
