--- a/public/translations/en/projects/coza.json
+++ b/public/translations/en/projects/coza.json
@@ -1,12 +1,12 @@
 {
     "title": "Coza",
     "cover": {
-        "src": "coza/feed+shop/coza.com.br-feed-2019-tour",
-        "width": 1943,
-        "height": 976,
+        "src": "feed+shop/coza.com.br-feed-2019-tour",
+        "size": [1943, 976],
         "isVideo": true,
         "label": "Coza:homepage full tour"
     },
+    "folder": "coza/",
     "sections": [
         [
             [
@@ -14,43 +14,37 @@
             ],
             [
                 {
-                    "src": "coza/feed+shop/coza.com.br-31-03-19-1-mobile",
-                    "width": 834,
-                    "height": 1728,
+                    "src": "feed+shop/coza.com.br-31-03-19-1-mobile",
+                    "size": [834, 1728],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Coza:mobile full tour"
                 },
                 {
-                    "src": "coza/feed+shop/coza.com.br-feed-2019-full-page",
-                    "width": 1920,
-                    "height": 22418,
+                    "src": "feed+shop/coza.com.br-feed-2019-full-page",
+                    "size": [1920, 22418],
                     "canExpand": true,
                     "label": "Coza:full page screenshoot"
                 },
                 {
-                    "src": "coza/feed+shop/coza.com.br-en-2020-12-15-18-54",
-                    "width": 1920,
-                    "height": 4861,
+                    "src": "feed+shop/coza.com.br-en-2020-12-15-18-54",
+                    "size": [1920, 4861],
                     "canExpand": true,
                     "label": "Coza:english homepage"
                 },
                 {
-                    "src": "coza/articles+galleries+photo/coza-article--organização-coza-com-as-dicas-da-maysa",
-                    "width": 1920,
-                    "height": 2423,
+                    "src": "articles+galleries+photo/coza-article--organização-coza-com-as-dicas-da-maysa",
+                    "size": [1920, 2423],
                     "canExpand": true,
                     "label": "Coza:article - Organização com as dicas da maysa."
                 }, {
-                    "src": "coza/articles+galleries+photo/coza-article--image-gallery-a-cada-instante-da-rotina-mais-coza+pantone",
-                    "width": 1920,
-                    "height": 2249,
+                    "src": "articles+galleries+photo/coza-article--image-gallery-a-cada-instante-da-rotina-mais-coza+pantone",
+                    "size": [1920, 2249],
                     "canExpand": true,
                     "label": "Coza:image gallery - A cada instante da rotina. Mais coza + pantone."
                 }, {
-                    "src": "coza/articles+galleries+photo/coza-article--seu-banheiro-cheio-de-beleza",
-                    "width": 1920,
-                    "height": 2414,
+                    "src": "articles+galleries+photo/coza-article--seu-banheiro-cheio-de-beleza",
+                    "size": [1920, 2414],
                     "canExpand": true,
                     "label": "Coza:article - Seu banheiro cheio de beleza."
                 }
@@ -61,16 +55,14 @@
             [
                 {
                     "class": "landscape",
-                    "src": "coza/where-to-find/coza-onde-encontrar-tour",
-                    "width": 1947,
-                    "height": 976,
+                    "src": "where-to-find/coza-onde-encontrar-tour",
+                    "size": [1947, 976],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Coza:where to find page on desktop"
                 }, {
-                    "src": "coza/where-to-find/coza.com.br-onde-encontrar-31-03-19-1-mobile",
-                    "width": 834,
-                    "height": 1728,
+                    "src": "where-to-find/coza.com.br-onde-encontrar-31-03-19-1-mobile",
+                    "size": [834, 1728],
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Coza:where to find page on mobile"
