TRANSLATIONS: add firebase, update code

--- a/public/translations/en/pages/not-found.json
+++ b/public/translations/en/pages/not-found.json
@@ -1,1 +1,4 @@
-{"title":"Looks like someone's lost here.","link":"Click here to go to the main page."}
+{
+    "title": "Looks like someone's lost here.",
+    "link": "Click here to go to the main page."
+}
